--- a/index.html
+++ b/index.html
@@ -6,6 +6,43 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Title</h1>
+  nav
+    .nav__logo
+    .nav__button
+  main
+    header
+        h1
+        button
+    #section-img
+      .section-img__top--short
+      .section-img__top--large
+      .section-img__image
+        img
+    #contenido-digital
+      h2
+      .contenido-digital__grid--container
+        .contenido-digital__grid--item
+          h3
+          p
+          button
+
+        .contenido-digital__grid--item
+          h3
+          p
+          button
+
+        .contenido-digital__grid--item
+          h3
+          p
+          button
+
+  footer
+    .footer__top
+      .footer__logo
+      .footer__redes-sociales
+    .footer__bottom
+      .footer__derechos
+      .footer__author
+
 </body>
 </html>
