maqueta-nav update

--- a/index.html
+++ b/index.html
@@ -3,21 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Proyecto de Curso de Frontend</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  nav
-    .nav__logo
-    .nav__button
+  <nav class="nav__wrapper">
+    <div class="nav__logo">
+      <img src="src/images/logo.png" alt="">
+    </div>
+    <div class="nav__button">
+      <button>Mis Sitios</button>
+    </div>
+  </nav>
+    
+
   main
     header
         h1
         button
+
     #section-img
       .section-img__top--short
       .section-img__top--large
       .section-img__image
         img
+
     #contenido-digital
       h2
       .contenido-digital__grid--container
