--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <img src="src/images/logo.png" alt="Logo GVallejos">
       </div>
       <div id="nav__button" class="nav__button">        
-        <a href="#" class="button button--white">
+        <a href="https://linktr.ee/gvallejos" target="_blank" class="button button--white">
           <span>Contáctame</span>
           <div class="button__icon-border">
             <span class="fa fa-chain"></span>
@@ -45,7 +45,7 @@
       <div class="header__banner">
         <h1>Bienvenido a mi Proyecto de Frontend</h1>
         <div class="header__button--main">
-          <a href="#" class="button button--black">
+          <a href="https://gvallejos.com/" target="_blank" class="button button--black">
             <span>Conoce más de mi</span>  
             <div class="button__icon-border">
               <span class="fa fa-external-link-square"></span>         
@@ -80,7 +80,7 @@
           <div class="contenido-digital__grid--item">
             <h3>Hablemos de Salesforce</h3>
             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
-            <a href="#" class="button button--white">
+            <a href="https://www.youtube.com/@HablemosDeSalesforce" target="_blank" class="button button--white">
               <span>Ver Más</span>
               <div class="button__icon-border">
                 <span class="fa fa-external-link"></span>
@@ -91,7 +91,7 @@
           <div class="contenido-digital__grid--item">
             <h3>Snake On Code</h3>
             <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus</p>
-            <a href="#" class="button button--white">
+            <a href="https://snakeoncode.com/" target="_blank" class="button button--white">
               <span>Ver Más</span>
               <div class="button__icon-border">
                 <span class="fa fa-external-link"></span>
@@ -102,7 +102,7 @@
           <div class="contenido-digital__grid--item">
             <h3>GVallejos.com</h3>
             <p>To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?</p>
-            <a href="#" class="button button--white">
+            <a href="https://gvallejos.com/" target="_blank" class="button button--white">
               <span>Ver Más</span>
               <div class="button__icon-border">
                 <span class="fa fa-external-link"></span>
@@ -126,17 +126,17 @@
       </div>
       <div class="footer__rs--wrapper">
         <div class="footer__rs--item">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/gianvallejos/" target="_blank">
             <span class="fa fa-linkedin"></span>
           </a>
         </div>
         <div class="footer__rs--item">
-          <a href="#">
+          <a href="https://www.instagram.com/gvallejos.dev/" target="_blank">
             <span class="fa fa-instagram"></span>
           </a>
         </div>        
         <div class="footer__rs--item">
-          <a href="#">
+          <a href="https://x.com/gianvallejos_pe" target="_blank">
             <span class="fa fa-twitter"></span>
           </a>
         </div>
